static/css/style.css
/*
  General Theme
*/

@font-face {
  font-family: 'Bentham';
  font-style: normal;
  font-weight: 400;
  src: local('Bentham'), local('Bentham-Regular'), url(https://fonts.gstatic.com/s/bentham/v6/SVc3EWThHQ2hzWZPpEYHFw.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}

/* cyrillic-ext */
@font-face {
  font-family: 'Fira Sans';
  font-style: normal;
  font-weight: 400;
  src: local('Fira Sans'), local('FiraSans-Regular'), url(https://fonts.gstatic.com/s/firasans/v5/g5Sf_134cAtTKkNnIjIkXxJtnKITppOI_IvcXXDNrsc.woff2) format('woff2');
  unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
}
/* cyrillic */
@font-face {
  font-family: 'Fira Sans';
  font-style: normal;
  font-weight: 400;
  src: local('Fira Sans'), local('FiraSans-Regular'), url(https://fonts.gstatic.com/s/firasans/v5/T3abUOg4YgfjOby2l-QudhJtnKITppOI_IvcXXDNrsc.woff2) format('woff2');
  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
}
/* greek */
@font-face {
  font-family: 'Fira Sans';
  font-style: normal;
  font-weight: 400;
  src: local('Fira Sans'), local('FiraSans-Regular'), url(https://fonts.gstatic.com/s/firasans/v5/5jAMGMsBXS6xUYEytGcZdBJtnKITppOI_IvcXXDNrsc.woff2) format('woff2');
  unicode-range: U+0370-03FF;
}
/* latin-ext */
@font-face {
  font-family: 'Fira Sans';
  font-style: normal;
  font-weight: 400;
  src: local('Fira Sans'), local('FiraSans-Regular'), url(https://fonts.gstatic.com/s/firasans/v5/MIPWVWI_mY_QERxcMVPEwBJtnKITppOI_IvcXXDNrsc.woff2) format('woff2');
  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'Fira Sans';
  font-style: normal;
  font-weight: 400;
  src: local('Fira Sans'), local('FiraSans-Regular'), url(https://fonts.gstatic.com/s/firasans/v5/EjsrzDkQUQCDwsBtLpcVQVtXRa8TVwTICgirnJhmVJw.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}

html {
  box-sizing: border-box;
}

h1, h2, h3, h4, h5, p, a {
  color: #2a2b2b;
  font-family: "Bentham", serif;
  font-style: normal;
  font-weight: normal;
  line-height: 1.4;
  margin-bottom: 0.5rem;
  margin-top: 0.2rem;
  text-shadow: 0px 7px 7px rgba(0, 0, 0, 0.40);
  text-decoration: none;
}

h1 {
  font-size: 4.125em;
}

h2 {
  font-size: 1.75em;
  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
}

h3 {
  font-size: 1.50em;
  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
}

p {
  font-size: 1.15em;
  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
}
ol {
  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.49);
}

*, *:before, *:after {
  box-sizing: inherit;
}

body {
  margin: 0;
  background-color: #e3d0b6;
  /* background-image: url("../img/bgTile.jpg"); */
  background-repeat: repeat;
}

body.index {
  overflow: hidden;
}

p.result {
  font-size: 1.50em;
  text-decoration: none;
  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
}

a {
  text-decoration: underline;
  -webkit-text-decoration-color: #2a2b2b;
  -moz-text-decoration-color: #2a2b2b;
  text-decoration-color: #2a2b2b;
  -webkit-text-decoration-color: #a70200;
  -moz-text-decoration-color: #a70200;
  text-decoration-color: #a70200;
  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.10);
}

::selection {
  background: #c0bdb6;
}
::-moz-selection {
  background: #c0bdb6;
}

.flex-form {
  z-index: 10;
  position: relative;
}

.flex-form > *:last-child {
  border-right: 0;
}

.flex-form {
  display:flex;
}

.cover  {
  height:100vh;
  width:100%;
}

.cover {
  display:flex;
  justify-content:center;
  align-items:center;
  flex-direction: column;
  position: relative;
  margin: -150px 0;
}

input[type="text"] {
  color: #c0bdb6;
  font-family: 'Fira Sans', sans-serif;
  background: #2a2b2b;
  width: 500px;
  height: 50px;
  padding: 12px;
  border: 10px;
  font-size: 1.2em;
  -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
          border-radius: 8px;
  -webkit-box-shadow: 0px 13px 78px 0px rgba(0,0,0,0.59);
  -moz-box-shadow: 0px 13px 78px 0px rgba(0,0,0,0.59);
  box-shadow: 0px 13px 78px 0px rgba(0,0,0,0.59);
}

/*
  overriden typeahead.js stuff
*/

.typeahead,
.tt-query,
.tt-hint,
.tt-menu {
  color: #c0bdb6;
  font-family: 'Fira Sans', sans-serif;
  width: 500px;
  margin: 12px 0;
  padding: 8px 0;
  background: #2a2b2b;
  font-size: 1.2em;
  line-height: 30px;
  outline: none;
  -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
          border-radius: 8px;
  -webkit-box-shadow: 0px 13px 78px 0px rgba(0,0,0,0.20);
  -moz-box-shadow: 0px 13px 78px 0px rgba(0,0,0,0.20);
  box-shadow: 0px 13px 78px 0px rgba(0,0,0,0.20);
  text-align: left;
}

.tt-highlight {
  color: #fff;
}

.tt-suggestion {
  padding: 3px 20px;
  font-size: 16px;
  line-height: 24px;
}

.tt-suggestion:hover {
  cursor: default;
  color: #fff;
  background-color: #c0bdb6;
}

.tt-suggestion p {
  margin: 0;
}

ol {
  list-style-type: none;

  margin: 0;
  margin-left: 5em;
  padding: 0;

  counter-reset: li-counter;
}
ol > li{
  position: relative;
  margin-bottom: 20px;
  padding-left: 0.5em;
  min-height: 3em;
}
ol li:before {
  position: absolute;
  top: 0;
  left: -1em;
  width: 0.8em;

  font-size: 2.75em;
  line-height: 1;
  font-weight: bold;
  text-align: right;
  color: #464646;
  /* color: #a70200; */

  content: counter(li-counter);
  counter-increment: li-counter;
}

ol:after {
  border-right: 3px solid #A70200;
}

